# runbookai

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  hardware_runbook.yaml  pyproject.toml
.github/workflows/: ci.yml
demo/: Dockerfile.ssh-target  fire_alert.sh  gen_keys.sh  hardware_demo.sh  journalctl_stub.sh  psql_stub.sh  run_demo.py  systemctl_stub.sh
demo/chaos/: Dockerfile  chaos.py  entrypoint.sh  run.sh  setup.sh  teardown.sh
demo/chaos/keys/: authorized_keys  demo_key
demo/chaos/runbooks/: demo-app-cpu.yaml  demo-app-disk.yaml  demo-app-dns.yaml  demo-app-down.yaml  demo-app-fd.yaml  demo-app-latency.yaml  demo-app-log-spam.yaml  demo-app-oom.yaml
docs/: index.html
marketing/: launch_posts.md
runbookai/: config.py  database.py  demo.py  hardware_runbook.yaml  main.py  models.py  slack.py
runbookai/agent/: credentials.py  demo.py  harness.py  ipmi_poller.py  suggest_mode.py  tools.py
runbookai/api/: analysis.py  approvals.py  hosts.py  incidents.py  postmortem.py  runbooks.py  webhooks.py
runbookai/integrations/: pagerduty.py
runbookai/static/: demo-dashboard.html  replay.html
runbookai/trace/: recorder.py
runbooks/: checkout-latency.yaml  db-connection-exhausted.yaml  high-cpu.yaml  payment-service-503.yaml  service-down.yaml
tests/: test_ipmi_poller.py  test_postmortem_slack.py  test_regression_analysis.py  test_tools.py  test_webhooks.py
